[gd_scene load_steps=28 format=3 uid="uid://brk0q8nxo0bwl"]

[ext_resource type="Texture2D" uid="uid://b5x7eqgdimw7g" path="res://achtergrond3.jpeg" id="1_uy0lt"]
[ext_resource type="Texture2D" uid="uid://qd8pk6e1vvsi" path="res://platformen/platform.JPG" id="2_gp137"]
[ext_resource type="Script" uid="uid://cwh1ix2s2knil" path="res://character_body_2d.gd" id="3_ly52a"]
[ext_resource type="Texture2D" uid="uid://bio1nsovh1uu2" path="res://lopend1.png" id="4_8r5xx"]
[ext_resource type="Texture2D" uid="uid://bo0bpg2u2ffs8" path="res://lopend2.png" id="5_goyn2"]
[ext_resource type="Texture2D" uid="uid://bja2vb8p43yfi" path="res://normaal1.png" id="6_11258"]
[ext_resource type="Script" uid="uid://b0rsimu5t5vs4" path="res://character_body_2d. 2.gd" id="7_t1yan"]
[ext_resource type="Texture2D" uid="uid://cxoquyvwidt4n" path="res://Image (1).png" id="8_4olca"]
[ext_resource type="Texture2D" uid="uid://c37hppqrefw6g" path="res://Image.png" id="9_iy32p"]
[ext_resource type="Script" uid="uid://dbjmunxwa5vlh" path="res://gem_1.gd" id="10_be5te"]
[ext_resource type="Texture2D" uid="uid://dsrkkdxyak0hq" path="res://gemb.png" id="11_jkv2u"]
[ext_resource type="Script" uid="uid://dqc6msrwkxfmg" path="res://gem_2.gd" id="12_llhui"]
[ext_resource type="Script" uid="uid://bndsy26uajyfm" path="res://deur3.gd" id="13_uy0lt"]
[ext_resource type="Texture2D" uid="uid://dmj0vj8phatl4" path="res://deur_dicht.png" id="14_pobtw"]
[ext_resource type="Texture2D" uid="uid://drg1f1fkukpmo" path="res://deur_open.png" id="15_o8x4u"]
[ext_resource type="Script" uid="uid://ctms3118dqjc" path="res://game_over_menu.gd" id="16_net8y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_anbts"]
size = Vector2(472.02942, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_l275l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8r5xx")
}, {
"duration": 1.0,
"texture": ExtResource("5_goyn2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wcr7i"]
radius = 14.0
height = 52.0

[sub_resource type="SpriteFrames" id="SpriteFrames_xn2o6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_4olca")
}, {
"duration": 1.0,
"texture": ExtResource("9_iy32p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6w21v"]
radius = 20.0
height = 84.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l4a72"]
radius = 19.0
height = 82.0

[sub_resource type="CircleShape2D" id="CircleShape2D_frpy7"]
radius = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbdbk"]
size = Vector2(68, 92)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_q1iaj"]
a = Vector2(5, -259)
b = Vector2(-1, 81)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_sjl0t"]
a = Vector2(-8, -220)
b = Vector2(-4, 63)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l275l"]
bg_color = Color(0.19501162, 0.110262014, 0, 1)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[node name="MainScene" type="Node2D"]
position = Vector2(1, 0)

[node name="achtergrond" type="Sprite2D" parent="."]
position = Vector2(414.99997, 106)
scale = Vector2(1.0600001, 0.73294145)
texture = ExtResource("1_uy0lt")

[node name="platformen" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="platformen"]
position = Vector2(111, 94)
shape = SubResource("RectangleShape2D_anbts")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="platformen/CollisionShape2D"]
scale = Vector2(0.95, 0.1)
texture = ExtResource("2_gp137")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="platformen"]
position = Vector2(800, 151)
shape = SubResource("RectangleShape2D_anbts")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="platformen/CollisionShape2D2"]
position = Vector2(7, 0)
scale = Vector2(0.95, 0.1)
texture = ExtResource("2_gp137")

[node name="vloer" type="StaticBody2D" parent="."]
position = Vector2(263, 198)
scale = Vector2(2.191276, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="vloer"]
position = Vector2(108.23529, 94)
shape = SubResource("RectangleShape2D_anbts")

[node name="Sprite2D" type="Sprite2D" parent="vloer/CollisionShape2D"]
position = Vector2(-13.321388, 0.99999994)
scale = Vector2(0.9982039, 0.1)
texture = ExtResource("2_gp137")

[node name="player" type="CharacterBody2D" parent="." groups=["player"]]
script = ExtResource("3_ly52a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="player"]
visible = false
position = Vector2(58.000004, 40.499996)
scale = Vector2(0.13899612, 0.16239315)
sprite_frames = SubResource("SpriteFrames_l275l")

[node name="Sprite2D" type="Sprite2D" parent="player"]
position = Vector2(58.000004, 42.000004)
scale = Vector2(0.13380283, 0.16246496)
texture = ExtResource("6_11258")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(59, 41)
shape = SubResource("CapsuleShape2D_wcr7i")

[node name="zombie" type="CharacterBody2D" parent="."]
position = Vector2(507, -1)
collision_layer = 2
script = ExtResource("7_t1yan")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="zombie"]
visible = false
position = Vector2(207, 241)
scale = Vector2(0.04, 0.04)
sprite_frames = SubResource("SpriteFrames_xn2o6")

[node name="Sprite2D" type="Sprite2D" parent="zombie"]
position = Vector2(207, 241)
scale = Vector2(0.04, 0.04)
texture = ExtResource("9_iy32p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="zombie"]
position = Vector2(209, 238)
shape = SubResource("CapsuleShape2D_6w21v")

[node name="Area2D" type="Area2D" parent="zombie"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="zombie/Area2D"]
position = Vector2(210, 238)
shape = SubResource("CapsuleShape2D_l4a72")

[node name="zombie2" type="CharacterBody2D" parent="."]
position = Vector2(480, -142)
collision_layer = 2
script = ExtResource("7_t1yan")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="zombie2"]
visible = false
position = Vector2(207, 241)
scale = Vector2(0.04, 0.04)
sprite_frames = SubResource("SpriteFrames_xn2o6")

[node name="Sprite2D" type="Sprite2D" parent="zombie2"]
position = Vector2(207, 241)
scale = Vector2(0.04, 0.04)
texture = ExtResource("9_iy32p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="zombie2"]
position = Vector2(209, 238)
shape = SubResource("CapsuleShape2D_6w21v")

[node name="Area2D" type="Area2D" parent="zombie2"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="zombie2/Area2D"]
position = Vector2(210, 238)
shape = SubResource("CapsuleShape2D_l4a72")

[node name="Gem1" type="Area2D" parent="."]
position = Vector2(731, 227)
collision_layer = 2
script = ExtResource("10_be5te")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Gem1"]
position = Vector2(1, 9)
scale = Vector2(0.049072273, 0.049804684)
texture = ExtResource("11_jkv2u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gem1"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_frpy7")

[node name="Gem2" type="Area2D" parent="."]
position = Vector2(708, 82)
collision_layer = 2
script = ExtResource("12_llhui")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Gem2"]
position = Vector2(1, 9)
scale = Vector2(0.049072273, 0.049804684)
texture = ExtResource("11_jkv2u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gem2"]
shape = SubResource("CircleShape2D_frpy7")

[node name="Deur" type="Area2D" parent="."]
position = Vector2(95, 212)
script = ExtResource("13_uy0lt")
metadata/_edit_group_ = true

[node name="Dicht" type="Sprite2D" parent="Deur"]
position = Vector2(21.999979, 86.56249)
scale = Vector2(0.12939452, 0.18511963)
texture = ExtResource("14_pobtw")

[node name="Sprite2D2" type="Sprite2D" parent="Deur"]
visible = false
position = Vector2(23, 87)
scale = Vector2(0.12963869, 0.18640137)
texture = ExtResource("15_o8x4u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deur"]
position = Vector2(1, 9)
shape = SubResource("RectangleShape2D_wbdbk")

[node name="BoundryL" type="StaticBody2D" parent="."]
position = Vector2(9, 27)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundryL"]
position = Vector2(-11, 210)
shape = SubResource("SegmentShape2D_q1iaj")

[node name="BoundryR" type="StaticBody2D" parent="."]
position = Vector2(823, 9)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundryR"]
position = Vector2(-11, 210)
shape = SubResource("SegmentShape2D_sjl0t")

[node name="GameOverMenu" type="CanvasLayer" parent="."]
process_mode = 2
script = ExtResource("16_net8y")

[node name="GameOverPanel" type="Panel" parent="GameOverMenu"]
offset_left = 232.0
offset_top = 26.0
offset_right = 632.0
offset_bottom = 276.0
metadata/_edit_use_anchors_ = true

[node name="ResultLabel" type="Label" parent="GameOverMenu"]
offset_left = 344.0
offset_top = 45.0
offset_right = 644.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 40
text = " You died 
      ðŸ’€
"
metadata/_edit_use_anchors_ = true

[node name="RestartButton" type="Button" parent="GameOverMenu"]
offset_left = 306.0
offset_top = 165.0
offset_right = 556.0
offset_bottom = 228.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_l275l")
text = "Play again"
metadata/_edit_use_anchors_ = true

[node name="Restartingknop" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("16_net8y")

[node name="RestartButton2" type="Button" parent="Restartingknop"]
offset_left = 703.0
offset_top = -1.0
offset_right = 803.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_l275l")
text = "restart"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="GameOverMenu/RestartButton" to="zombie" method="_on_restart_button_pressed"]
[connection signal="restart" from="Restartingknop" to="zombie" method="_on_restartingknop_restart"]
[connection signal="pressed" from="Restartingknop/RestartButton2" to="Restartingknop" method="_on_restart_button_pressed"]
